AKM-275 warning dialog and whitespace below footer fix

--- a/components/Layout/index.module.scss
+++ b/components/Layout/index.module.scss
@@ -1,8 +1,13 @@
 .layout {
   width: 100%;
-
+  min-height: 100vh;
   // * {
   //   border: 1px solid red;
   // }
+  // overflow-y: scroll;
   overflow-x: hidden;
+
+  .children {
+    min-height: 80vh;
+  }
 }
